unpackaged/main/default/objects/OrderItem/fields/Connector_Module__c.field-meta.xml
<CustomField>
    <fullName>Connector_Module__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connector Module?</label>
    <type>Checkbox</type>
</CustomField>