unpackaged/main/default/objects/OrderItem/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>