unpackaged/main/default/objects/OrderItem/fields/Flipped_from_Asset__c.field-meta.xml
<CustomField>
    <fullName>Flipped_from_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flipped from Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Order Products (Flipped from Asset)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>