unpackaged/main/default/objects/OrderItem/fields/Flipped_from_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Flipped_from_Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flipped from Contract Line</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Order Products (Flipped from Contract Line)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>