unpackaged/main/default/objects/OrderItem/fields/Flipped_Qty__c.field-meta.xml
<CustomField>
    <fullName>Flipped_Qty__c</fullName>
    <label>Flipped Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>