unpackaged/main/default/objects/OrderItem/fields/Legacy_Zero_License_Fee__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Zero_License_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify products that have a zero license fee but will still have ASM. Field exists on Product, Quote Line, Order Item and Contract Line Item.</description>
    <label>Legacy Zero License Fee</label>
    <type>Checkbox</type>
</CustomField>