unpackaged/main/default/objects/OrderItem/fields/Licenses_Per_Period__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Per_Period__c</fullName>
    <description>Number of Licenses per period</description>
    <formula>ROUND(((EndDate  -  ServiceDate) / 365 * 12),0) * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Licenses per period</inlineHelpText>
    <label>Licenses Per Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>