unpackaged/main/default/objects/OrderItem/fields/Natural_Account__c.field-meta.xml
<CustomField>
    <fullName>Natural_Account__c</fullName>
    <formula>CASE (Fee_Type__c,
&#39;License&#39;,
CASE(Order.Deal_Type__c ,&#39;Perpetual&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4001&#39;,&#39;2&#39;,&#39;4002&#39;,&#39;3&#39;,&#39;4003&#39;,&#39;&#39;),
&#39;Term&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4001&#39;,&#39;2&#39;,&#39;4002&#39;,&#39;3&#39;,&#39;4003&#39;,&#39;&#39;),
&#39;Saas&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4004&#39;,&#39;2&#39;,&#39;4005&#39;,&#39;3&#39;,&#39;4006&#39;,&#39;&#39;),
&#39;Subscription&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4007&#39;,&#39;2&#39;,&#39;4008&#39;,&#39;3&#39;,&#39;4009&#39;,&#39;&#39;),
&#39;&#39;),
&#39;ASM&#39;,
CASE(Order.Deal_Type__c,&#39;Perpetual&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4050&#39;,&#39;2&#39;,&#39;4051&#39;,&#39;3&#39;,&#39;4051&#39;,&#39;&#39;),
&#39;Term&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4050&#39;,&#39;2&#39;,&#39;4051&#39;,&#39;3&#39;,&#39;4051&#39;,&#39;&#39;),
&#39;Saas&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4052&#39;,&#39;2&#39;,&#39;4053&#39;,&#39;3&#39;,&#39;4053&#39;,&#39;&#39;),
&#39;Subscription&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4055&#39;,&#39;2&#39;,&#39;4056&#39;,&#39;3&#39;,&#39;4056&#39;,&#39;&#39;),
&#39;&#39;),
&#39;Cloud&#39;,
CASE(Order.Deal_Type__c,&#39;Perpetual on Cloud&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4102&#39;,&#39;2&#39;,&#39;4103&#39;,&#39;3&#39;,&#39;4103&#39;,&#39;&#39;),
&#39;Term&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4102&#39;,&#39;2&#39;,&#39;4103&#39;,&#39;3&#39;,&#39;4103&#39;,&#39;&#39;),
&#39;Saas&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4100&#39;,&#39;2&#39;,&#39;4101&#39;,&#39;3&#39;,&#39;4101&#39;,&#39;&#39;),
&#39;Subscription&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4100&#39;,&#39;2&#39;,&#39;4101&#39;,&#39;3&#39;,&#39;4101&#39;,&#39;&#39;),
&#39;&#39;),
&#39;AMS&#39;,
CASE(Order.Deal_Type__c,&#39;Perpetual&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4156&#39;,&#39;2&#39;,&#39;4156&#39;,&#39;3&#39;,&#39;4156&#39;,&#39;&#39;),
&#39;Term&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4156&#39;,&#39;2&#39;,&#39;4156&#39;,&#39;3&#39;,&#39;4156&#39;,&#39;&#39;),
&#39;Saas&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4156&#39;,&#39;2&#39;,&#39;4156&#39;,&#39;3&#39;,&#39;4156&#39;,&#39;&#39;),
&#39;Subscription&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;4156&#39;,&#39;2&#39;,&#39;4156&#39;,&#39;3&#39;,&#39;4156&#39;,&#39;&#39;),
&#39;&#39;),
null,
CASE( Category__c ,&#39;Commitment Fee&#39;,&#39;2103&#39;,&#39;Commitment Rebate&#39;,&#39;2103&#39;,&#39;&#39;),
&#39;&#39;)</formula>
    <label>Natural Account</label>
    <type>Text</type>
</CustomField>