unpackaged/main/default/objects/OrderItem/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Id</label>
    <type>Text</type>
</CustomField>