unpackaged/main/default/objects/OrderItem/fields/Revenue_Natural_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Natural_Account_Code__c</fullName>
    <formula>CASE (Fee_Type__c,
&#39;AMS&#39;,
CASE(New_Business__c, &#39;1&#39;,&#39;00&#39;,&#39;2&#39;,&#39;99&#39;,&#39;3&#39;,&#39;99&#39;,&#39;00&#39;),&#39;00&#39;)</formula>
    <label>Revenue Natural Account Code</label>
    <type>Text</type>
</CustomField>