unpackaged/main/default/objects/OrderItem/fields/Revenue_Recognition_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Rule_Name__c</fullName>
    <formula>blng__RevenueRecognitionRule__r.Name</formula>
    <label>Revenue Recognition Rule Name</label>
    <type>Text</type>
</CustomField>