unpackaged/main/default/objects/OrderItem/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>