unpackaged/main/default/objects/OrderItem/fields/Split_Flag__c.field-meta.xml
<CustomField>
    <fullName>Split_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Flag</label>
    <type>Checkbox</type>
</CustomField>