unpackaged/main/default/objects/OrderItem/fields/Streamline_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Streamline_Revenue__c</fullName>
    <formula>Order.Streamline_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Streamline Revenue</label>
    <type>Checkbox</type>
</CustomField>