unpackaged/main/default/objects/OrderItem/fields/Uplift_Rate__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Rate__c</fullName>
    <label>Uplift Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>