unpackaged/main/default/objects/OrderItem/fields/xDeal_Type__c.field-meta.xml
<CustomField>
    <fullName>xDeal_Type__c</fullName>
    <formula>CASE( Order.Deal_Type__c ,
&#39;Perpetual&#39;,&#39;Perpetual&#39;,
&#39;Perpetual on Cloud&#39;,&#39;Perpetual&#39;,
&#39;Term&#39;,&#39;Term&#39;,
&#39;Subscription&#39;,&#39;Subscription&#39;,
&#39;Saas&#39;,&#39;Saas&#39;,
&#39;&#39;)</formula>
    <label>xDeal Type</label>
    <type>Text</type>
</CustomField>